package com.foundflow.auth.domain;

public enum Role {
    STAFF,
    OPS_MANAGER,
    ADMIN
}