package com.foundflow.lostitem.domain;

public enum ReportStatus {
    OPEN,
    MATCHED,
    CLOSED,
    COLLECTED
}