package com.foundflow.matching.domain;

public enum ItemType {
    LOST,
    FOUND
}
