package com.foundflow.notification.domain;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;

import java.time.LocalDateTime;
import java.util.UUID;

@Entity
@Table(name = "notifications")
public class Notification {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    @Column(name = "match_id")
    private UUID matchId;

    @Column(name = "venue_id")
    private UUID venueId;

    @Column(name = "recipient_address", nullable = false)
    private String recipientAddress;

    @Column(nullable = false)
    private String language;

    @Column(nullable = false)
    private String subject;

    @Column(nullable = false)
    private String header;

    @Column(columnDefinition = "TEXT", nullable = false)
    private String body;

    @Column(name = "sent_at")
    private LocalDateTime sentAt;

    public Notification() {
    }

    public Notification(
            UUID matchId,
            UUID venueId,
            String recipientAddress,
            String language,
            String subject,
            String header,
            String body,
            LocalDateTime sentAt
    ) {
        this.matchId = matchId;
        this.venueId = venueId;
        this.recipientAddress = recipientAddress;
        this.language = language;
        this.subject = subject;
        this.header = header;
        this.body = body;
        this.sentAt = sentAt;
    }

    public UUID getId() {
        return id;
    }

    public UUID getMatchId() {
        return matchId;
    }

    public UUID getVenueId() {
        return venueId;
    }

    public String getRecipientAddress() {
        return recipientAddress;
    }

    public String getLanguage() {
        return language;
    }

    public String getSubject() {
        return subject;
    }

    public String getHeader() {
        return header;
    }

    public String getBody() {
        return body;
    }

    public LocalDateTime getSentAt() {
        return sentAt;
    }

    public void setMatchId(UUID matchId) {
        this.matchId = matchId;
    }

    public void setVenueId(UUID venueId) {
        this.venueId = venueId;
    }

    public void setRecipientAddress(String recipientAddress) {
        this.recipientAddress = recipientAddress;
    }

    public void setLanguage(String language) {
        this.language = language;
    }

    public void setSubject(String subject) {
        this.subject = subject;
    }

    public void setHeader(String header) {
        this.header = header;
    }

    public void setBody(String body) {
        this.body = body;
    }

    public void setSentAt(LocalDateTime sentAt) {
        this.sentAt = sentAt;
    }
}
